# helpdesk-tickets

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
helpdesk_manager/: factory.py
helpdesk_manager/models/: comment.py  ticket.py  user.py
helpdesk_manager/routes/: auth.py  comments.py  home.py  login.py  register.py  ticket.py  tickets.py  users.py
helpdesk_manager/static/: styles.css
helpdesk_manager/templates/: home.html  layout.html  login.html  pagination.html  register.html
helpdesk_manager/templates/auth/: login.html  register.html
helpdesk_manager/templates/comments/: new.html
helpdesk_manager/templates/tickets/: edit.html  list.html  new.html  view.html
helpdesk_manager/templates/users/: list.html
helpdesk_manager/utils/: methods.py  require_auth.py  seed_database.py
tests/: test_auth_flow.py  test_protected_routes.py
