[project]
name = "helpdesk-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.12",
]

[tool.ruff.lint.per-file-ignores]
"helpdesk_manager/models/*.py" = ["F821"]
